<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@drawable/search_icon"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />

    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/shopping_cart"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/view_selector"
        android:title="@string/view"
        android:icon="@drawable/view_change"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/setting_button"
        android:title="@string/settings"
        android:icon="@drawable/app_settings"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/logOut"
        android:title="@string/logOut"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        />
</menu>