<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />
        <TextView
            android:id="@+id/itemTitle"
            style="itemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="itemPlaceholder"
            android:textColor="?android:textColorSecondary"/>
        <Button
            android:id="@+id/webpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weboldal"
            android:textColor="@color/black"
            android:layout_below="@id/subTitle"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="openWebpage"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:isIndicator="true"
            android:numStars="5"
            android:layout_marginStart="8dp" />
        <TextView
            android:id="@+id/subTitle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:padding="8dp"
            android:text="@string/item_info_placeholder"/>
    
        <TextView
            android:id="@+id/price"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/red"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:layout_centerHorizontal="true"
            android:text="@string/pickadate"/>
        <Button
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_centerHorizontal="true"
            android:text="@string/startDate"/>

        <LinearLayout
            android:id="@+id/modificationButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/datePicker"
            android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/datePicker"
                android:text="@string/booking"
                android:layout_centerHorizontal="true"
            />
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Törlés"
                android:layout_centerHorizontal="true"
                />
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>